H3CIPMSJAVA-20180830/src/objects/Child_Bundle_Information__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_Information__c</fullName>
        <label>Bundle Information</label>
        <referenceTo>Bundle_Information__c</referenceTo>
        <relationshipLabel>Child Bundle Information</relationshipLabel>
        <relationshipName>Child_Bundle_InformationToBundle_Informa</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Child_Description__c</fullName>
        <label>Child Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Product_Number__c</fullName>
        <label>Child Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Child Bundle Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Child Serial Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>